# pigo

./: .gitignore  CLAUDE.md  Makefile  README.md  client.go  client_test.go  compaction.go  compaction_test.go  constants.go  events.go  events_test.go  go.mod  go.sum  integration_test.go  main.go  main_test.go  mem.prof  memory.go  memory_deduplicator.go  memory_deduplicator_test.go  memory_extractor.go  memory_extractor_test.go  memory_test.go  ops.go  ops_test.go  result.go  session.go  session_test.go  skills.go  skills_test.go  tool_bash.go  tool_bash_test.go  tool_edit.go  tool_edit_test.go  tool_find.go  tool_find_test.go  tool_grep.go  tool_grep_test.go  tool_ls.go  tool_ls_test.go  (+10 more)
docs/reference/OpenViking/: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  MANIFEST.in  README.md  README_CN.md  pyproject.toml  setup.py
docs/reference/OpenViking/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/reference/OpenViking/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
docs/reference/OpenViking/.github/workflows/: _build.yml  _codeql.yml  _lint.yml  _publish.yml  _test_full.yml  _test_lite.yml  ci.yml  pr.yml  release.yml  rust-cli.yml  schedule.yml
docs/reference/OpenViking/crates/ov_cli/: Cargo.toml  README.md  SKILL.md  install.sh  test_ov.sh
docs/reference/OpenViking/docs/design/: multi-tenant-design.md
docs/reference/OpenViking/examples/: ov.conf.example  ovcli.conf.example  quick_start.py
docs/reference/OpenViking/examples/chatmem/: .gitignore  README.md  chatmem.py  ov.conf.example  pyproject.toml
docs/reference/OpenViking/examples/common/: __init__.py  boring_logging_config.py  recipe.py  resource_manager.py
docs/reference/OpenViking/examples/mcp-query/: README.md  ov.conf.example  pyproject.toml  server.py
docs/reference/OpenViking/examples/memex/: .gitignore  README.md  __init__.py  __main__.py  cli.py  client.py  config.py  feishu.py  ov.conf.example  pyproject.toml
docs/reference/OpenViking/examples/openclaw-skill/: SKILL.md
docs/reference/OpenViking/examples/query/: .gitignore  README.md  add.py  ov.conf.example  pyproject.toml  query.py
docs/reference/OpenViking/examples/server_client/: README.md  client_async.py  client_cli.sh  client_sync.py  ov.conf.example  pyproject.toml
docs/reference/OpenViking/openviking/: __init__.py  __main__.py  agfs_manager.py  async_client.py  client.py  sync_client.py
docs/reference/OpenViking/openviking/client/: __init__.py  local.py  session.py
docs/reference/OpenViking/openviking/core/: __init__.py  building_tree.py  context.py  directories.py  mcp_converter.py  skill_loader.py
docs/reference/OpenViking/openviking/message/: __init__.py  message.py  part.py
docs/reference/OpenViking/openviking/parse/: __init__.py  base.py  converter.py  custom.py  directory_scan.py  registry.py  tree_builder.py  vlm.py
docs/reference/OpenViking/openviking/prompts/: __init__.py  manager.py
docs/reference/OpenViking/openviking/retrieve/: __init__.py  hierarchical_retriever.py  intent_analyzer.py
docs/reference/OpenViking/openviking/server/: __init__.py  app.py  auth.py  bootstrap.py  config.py  dependencies.py  models.py
docs/reference/OpenViking/openviking/service/: __init__.py  core.py  debug_service.py  fs_service.py  pack_service.py  relation_service.py  resource_service.py  search_service.py  session_service.py
docs/reference/OpenViking/openviking/session/: __init__.py  compressor.py  memory_deduplicator.py  memory_extractor.py  session.py
docs/reference/OpenViking/openviking/storage/: __init__.py  collection_schemas.py  local_fs.py  viking_fs.py  viking_vector_index_backend.py  vikingdb_interface.py  vikingdb_manager.py
docs/reference/OpenViking/openviking/utils/: __init__.py  media_processor.py  resource_processor.py  skill_processor.py  time_utils.py
docs/reference/OpenViking/openviking_cli/: exceptions.py
docs/reference/OpenViking/openviking_cli/cli/: __init__.py  context.py  errors.py  main.py  output.py
docs/reference/OpenViking/openviking_cli/client/: __init__.py  base.py  http.py  sync_http.py
docs/reference/OpenViking/openviking_cli/retrieve/: __init__.py  types.py
docs/reference/OpenViking/openviking_cli/session/: user_id.py
docs/reference/OpenViking/openviking_cli/utils/: __init__.py  async_utils.py  downloader.py  extractor.py  llm.py  logger.py  rerank.py  storage.py  uri.py
docs/reference/OpenViking/src/: CMakeLists.txt  py_accessors.h  pybind11_interface.cpp
docs/reference/OpenViking/src/common/: ann_utils.h  io_utils.h  json_utils.h  log_utils.cpp  log_utils.h  string_utils.h  zip_sort.h
docs/reference/OpenViking/src/index/: common_structs.h  index_engine.cpp  index_engine.h  index_manager.h
docs/reference/OpenViking/src/store/: bytes_row.cpp  bytes_row.h  common_structs.h  kv_store.h  persist_store.cpp  persist_store.h  volatile_store.cpp  volatile_store.h
docs/reference/OpenViking/tests/: README.md  __init__.py  conftest.py  test_config_loader.py  test_upload_utils.py
docs/reference/OpenViking/tests/agfs/: conftest.py  test_fs_local.py  test_fs_s3.py
docs/reference/OpenViking/tests/cli/: conftest.py  test_cli.py
docs/reference/OpenViking/tests/client/: __init__.py  conftest.py  test_file_operations.py  test_filesystem.py  test_import_export.py  test_lifecycle.py  test_relations.py  test_resource_management.py  test_search.py  test_skill_management.py
docs/reference/OpenViking/tests/engine/: CMakeLists.txt  test_common.cpp  test_index_engine.cpp
docs/reference/OpenViking/tests/integration/: __init__.py  conftest.py  test_full_workflow.py  test_http_integration.py  test_quick_start_lite.py
docs/reference/OpenViking/tests/misc/: test_code_parser.py  test_config_validation.py  test_debug_service.py  test_extract_zip.py  test_mkdir.py  test_port_check.py  test_tree_builder_dedup.py  test_vikingdb_observer.py
docs/reference/OpenViking/tests/parse/: __init__.py  test_add_directory.py  test_directory_parser_routing.py  test_directory_scan.py  (+1 more)
(+468 files in other folders)
